--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build:before": "build",
     "run:before": "build"
   },
+  "config": {
+    "ionic_rollup": "config/rollup.config.js"
+  },
   "dependencies": {
     "@angular/common": "2.0.0",
     "@angular/compiler": "2.0.0",
@@ -23,14 +26,18 @@
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/platform-server": "2.0.0",
     "@ionic/storage": "1.1.6",
+    "@types/lodash": "^4.14.38",
+    "firebase": "^3.5.2",
     "ionic-angular": "2.0.0-rc.1",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
+    "lodash": "^4.16.5",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.6.21"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^0.0.36",
+    "rollup-plugin-replace": "^1.1.1",
     "typescript": "^2.0.3"
   },
   "cordovaPlugins": [
