--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "declaration": true,
+    "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [
@@ -10,10 +10,11 @@
     ],
     "module": "es2015",
     "moduleResolution": "node",
+    "sourceMap": true,
     "target": "es5"
   },
-  "types": [
-    "firebase"
+  "include": [
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules"
